Navigation bar added

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 .linear-gradient-background {
+    margin-top: 40px;
     background: rgb(194, 16, 164);
 }
 
@@ -45,3 +46,43 @@ body {
 img {
     max-width: 100%;
 }
+
+/* Navigációs bar design-ja */
+
+nav {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+ul {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 0;
+    overflow: hidden;
+}
+
+.left-hand {
+    float: left;
+}
+
+.right-hand {
+    float: right;
+}
+
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+/* Navigációs desing vége */
