szív icon baszakodás

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,11 @@ body {
 img {
     max-width: 100%;
 }
+
+.sziv:before {
+    content: "\f004";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+}
